--- a/templates/include/about.html
+++ b/templates/include/about.html
@@ -1,4 +1,9 @@
 
+
+<script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 <div class="col-four md-six tab-full about">
     <h3>About Hanabis</h3>
 
@@ -21,3 +26,4 @@
         </li>
     </ul> <!-- end header__social -->
 </div> <!-- end about -->
+
