--- a/templates/hanabis_blog/post_list.html
+++ b/templates/hanabis_blog/post_list.html
@@ -9,51 +9,67 @@
 
 {#{% endblock firs_posts %}#}
 
+
+
 {% block posts %}
-    {% for post in post_list %}
-        <article class="masonry__brick entry format-standard" data-aos="fade-up">
+    <section class="s-content">
 
-            <div class="entry__thumb">
-                <a href="{{ post.get_absolute_url }}" class="entry__thumb-link">
-                    <img src="{{post.image.url}}"
-                         srcset="{{post.image.url}} 1x, {{post.image.url}} 2x" alt="">
-                </a>
-            </div>
+        <div class="row masonry-wrap">
+            <div class="masonry">
 
-            <div class="entry__text">
-                <div class="entry__header">
+                <div class="grid-sizer"></div>
+                    {% for post in post_list %}
+                        <article class="masonry__brick entry format-standard" data-aos="fade-up">
 
-                    <div class="entry__date">
-                        <a href="#0">{{ post.date_pub }}</a>
-                    </div>
-                    {% for tag in post.tags.all %}
-                    <span class="entry__category"><a href="{{ tag.get_absolute_url }}">
-                    {{ tag.title }}
-                    </a></span>
+                            <div class="entry__thumb">
+                                <a href="{{ post.get_absolute_url }}" class="entry__thumb-link">
+                                    <img src="{{post.image.url}}"
+                                         srcset="{{post.image.url}} 1x, {{post.image.url}} 2x" alt="">
+                                </a>
+                            </div>
+
+                            <div class="entry__text">
+                                <div class="entry__header">
+
+                                    <div class="entry__date">
+                                        <a href="#0">{{ post.date_pub }}</a>
+                                    </div>
+                                    {% for tag in post.tags.all %}
+                                    <span class="entry__category"><a href="{{ tag.get_absolute_url }}">
+                                    {{ tag.title }}
+                                    </a></span>
+                                    {% endfor %}
+                                    <h1 class="entry__title"><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h1>
+
+                                </div>
+                                <div class="entry__excerpt">
+                                    <p>
+
+                                       {{ post.body | safe | truncatewords:"10" }}
+
+                                    </p>
+                                </div>
+                                <div class="entry__meta">
+                                    <span class="entry__meta-links">
+                                        {% for auth in post.auth.all %}
+                                            <a href="{% url 'author_detail' auth.slug %}">{{ auth.name }}</a>
+                                        {% endfor %}
+                                    </span>
+                                </div>
+                            </div>
+
+                        </article> <!-- end article -->
+
                     {% endfor %}
-                    <h1 class="entry__title"><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h1>
 
-                </div>
-                <div class="entry__excerpt">
-                    <p>
 
-                       {{ post.body | safe }}
+            </div> <!-- end masonry -->
+        </div> <!-- end masonry-wrap -->
+        {% include 'hanabis_blog/pagination.html' %}
+ </section> <!-- s-content -->
 
-                    </p>
-                </div>
-                <div class="entry__meta">
-                    <span class="entry__meta-links">
-                        {% for auth in post.auth.all %}
-                        <a href="{% url 'author_detail' auth.slug %}">{{ auth.name }}</a>
-                        {% endfor %}
-                    </span>
-                </div>
-            </div>
-
-        </article> <!-- end article -->
-
-    {% endfor %}
 
 {% endblock posts %}
+
 
 
