--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -28,7 +28,8 @@
 
             <div class="header__search">
 
-                <form role="search" method="get" class="header__search-form" action="#">
+                <form role="search" method="get" class="header__search-form" action="{% url 'search' %}">
+                    {% csrf_token %}
                     <label>
                         <span class="hide-content">Search for:</span>
                         <input type="search" class="search-field" placeholder="Type Keywords" value="" name="s" title="Search for:" autocomplete="off">
@@ -36,7 +37,7 @@
                     <input type="submit" class="search-submit" value="Search">
                 </form>
 
-                <a href="#0" title="Close Search" class="header__overlay-close">Close</a>
+                <a href="{{page.get_absolute_url}}" title="Close Search" class="header__overlay-close">Close</a>
 
             </div>  <!-- end header__search -->
 
@@ -56,7 +57,7 @@
                         <li><a href="../../philosophy-colorlib/philosophy-colorlib/single-video.html">Video Post</a></li>
                         <li><a href="../../philosophy-colorlib/philosophy-colorlib/single-audio.html">Audio Post</a></li>
                         <li><a href="../../philosophy-colorlib/philosophy-colorlib/single-gallery.html">Gallery Post</a></li>
-                        <li><a href="post_detail.html">Standard Post</a></li>
+                        <li><a href="">Standard Post</a></li>
                         </ul>
                     </li>
                     <li class="has-children">
