--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -70,8 +70,8 @@
                             {% endfor %}
                         </ul>
                     </li>
-                    <li><a href="../../philosophy-colorlib/philosophy-colorlib/about.html" title="">About</a></li>
-                    <li><a href="../../philosophy-colorlib/philosophy-colorlib/contact.html" title="">Contact</a></li>
+                    <li><a href="{% url 'about' %} " title="">About</a></li>
+                    <li><a href="{% url 'contact' %}" title="">Contact</a></li>
                 </ul> <!-- end header__nav -->
 
                 <a href="#0" title="Close Menu" class="header__overlay-close close-mobile-menu">Close</a>
