--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load contact_tags %}
    <!-- s-footer
     ================================================== -->
     <footer class="s-footer">
@@ -50,26 +51,7 @@
                     </ul>
 
                 </div> <!-- end s-footer__social -->
-
-                <div class="col-five md-full end s-footer__subscribe">
-
-                    <h4>Our Newsletter</h4>
-
-                    <p>Sit vel delectus amet officiis repudiandae est voluptatem. Tempora maxime provident nisi et fuga et enim exercitationem ipsam. Culpa consequatur occaecati.</p>
-
-                    <div class="subscribe-form">
-                        <form id="mc-form" class="group" novalidate="true">
-
-                            <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Email Address" required="">
-
-                            <input type="submit" name="subscribe" value="Send">
-
-                            <label for="mc-email" class="subscribe-message"></label>
-
-                        </form>
-                    </div>
-
-                </div> <!-- end s-footer__subscribe -->
+        {% contact_form %}
 
             </div>
         </div> <!-- end s-footer__main -->
