--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -72,6 +72,13 @@
                     </li>
                     <li><a href="{% url 'about' %} " title="">About</a></li>
                     <li><a href="{% url 'contact' %}" title="">Contact</a></li>
+                    {% if user.is_authenticated %}
+                        <li><a href="{% url 'account_logout' %}" title="">Log out&nbsp;&nbsp;</a></li>
+                            <span>{{ user.username }}</span>
+                    {% else %}
+                        <li><a href="{% url 'account_login' %}" title="">Sign in</a></li>
+                        <li><a href="{% url 'account_signup' %}" title="">Registration</a></li>
+                    {% endif %}
                 </ul> <!-- end header__nav -->
 
                 <a href="#0" title="Close Menu" class="header__overlay-close close-mobile-menu">Close</a>
