--- a/templates/hanabis_blog/post_list.html
+++ b/templates/hanabis_blog/post_list.html
@@ -17,15 +17,18 @@
       <div class="post-entry-1">
         <a href="{{ post_list.0.get_absolute_url }}"><img src="{{ post_list.all.0.image.url }}" alt="Image" class="img-fluid"></a>
         <h2><a href="{{ post_list.all.0.get_absolute_url }}">{{ post_list.0.title }}</a></h2>
-        <p>{{ post_list.all.0.body|truncatechars:100 }}</p>
+        <p>{{ post_list.all.0.body|striptags|slice:':100' }}</p>
         <div class="post-meta">
           <span class="d-block">
           {% for auth in  post_list.0.auth.all %}
             <a href="{{ auth.get_absolute_url }}">{{ auth }}</a> in
           {% endfor %}
-          {% for tag in post_list.0.tags.all %}
-            <a href="{{ tag.get_absolute_url }}"> {{ tag }}</a>
-          {% endfor %}
+            <a href="{{ post_list.0.category.get_absolute_url }}">{{ post_list.0.category }}</a>
+          </span>
+          <span class="d-block">Tags:&nbsp;
+           {% for tag in post_list.0.tags.all %}
+              <a href="{{ tag.get_absolute_url }}">{{ tag }}</a>
+           {% endfor %}
           </span>
           <span class="date-read">{{ post_list.0.date_pub }}<span class="mx-1">&bullet;
           </span> 3 min read <span class="icon-star2"></span></span>
@@ -48,16 +51,22 @@
       <div class="thumbnail order-md-2" style="background-image: url('{{ post.image.url }}')"></div>
         <div class="contents order-md-1 pl-0">
           <h2><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h2>
-          <p class="mb-3">{{ post.body| truncatechars:50 }}</p>
+          <p class="mb-3">{{ post.body|striptags|slice:':100' }}</p>
           <div class="post-meta">
              <span class="d-block">
              {% for auth in  post.auth.all %}
                <a href="{{ aut.get_absolute_url  }}">{{ auth }}</a>
              {% endfor %}
              in
-            {% for tag in post_list.0.tags.all %}
-              <a href="{{ tag.get_absolute_url }}">{{ tag }}</a></span>
-            {% endfor %}
+{#            {% for category in post.category %}#}
+             <a href="{{ post.get_absolute_url }}">{{ post.category }}</a></span>
+{#            {% endfor %}#}
+             </span>
+             <span class="d-block">Tags:&nbsp;
+               {% for tag in post.tags.all %}
+                   <a href="{{ tag.get_absolute_url }}">{{ tag }}</a>
+               {% endfor %}
+             </span>
             <span class="date-read">{{ post.date_pub }}<span class="mx-1">&bullet;</span> 3 min read <span class="icon-star2"></span></span>
           </div>
         </div>
