--- a/templates/hanabis_blog/tags/last_posts.html
+++ b/templates/hanabis_blog/tags/last_posts.html
@@ -13,15 +13,20 @@
         <div class="post-entry-1">
           <a href="{{ last_posts.all.0.get_absolute_url }}"><img src="{{ last_posts.0.image.url }}" alt="Image" class="img-fluid"></a>
           <h2><a href="{{ last_posts.all.0.get_absolute_url }}">{{ last_posts.0.title }}</a></h2>
-          <p>{{ last_posts.all.0.body }}</p>
+          <p>{{ last_posts.all.0.body|striptags|slice:':200' }}</p>
           <div class="post-meta">
             <span class="d-block">
              {% for auth in  last_posts.0.auth.all %}
                     <a href="{{ auth.get_absolute_url }}">{{ auth }}</a> in
               {% endfor %}
-            {% for tag in last_posts.0.tags.all %}
-                <a href="{{ tag.get_absolute_url }}"> {{ tag }}</a>
-            {% endfor %}
+{#            {% for tag in last_posts.0.category %}#}
+              <a href="{{ last_posts.0.category.get_absolute_url }}"> {{ last_posts.0.category }}</a>
+{#            {% endfor %}#}
+             </span>
+             <span class="d-block">Tags:&nbsp;
+               {% for tag in last_posts.0.tags.all %}
+                   <a href="{{ tag.get_absolute_url }}">{{ tag }}</a>
+               {% endfor %}
              </span>
              <span class="date-read">{{ last_posts.0.date_pub }}<span class="mx-1">&bullet;
              </span> 3 min read <span class="icon-star2"></span></span>
@@ -29,67 +34,33 @@
         </div>
       </div>
 
-
-
-
       <div class="col-sm-6">
+       {% for last3posts in last_posts|slice:"1:5" %}
         <div class="post-entry-2 d-flex bg-light">
-          <div class="thumbnail" style="background-image: url('{{ last_posts.1.image.url }}')"></div>
+          <div class="thumbnail" style="background-image: url('{{ last3posts.image.url }}')"></div>
             <div class="contents">
-              <h2><a href="{{ last_posts.all.1.get_absolute_url }}">{{ last_posts.1.title }}</a></h2>
+              <h2><a href="{{ last3posts.get_absolute_url }}">{{ last3posts.title }}</a></h2>
               <div class="post-meta">
                 <span class="d-block">
-                  {% for auth in  last_posts.1.auth.all %}
-                    <a href="{{ auth.get_absolute_url }}">{{ auth }}</a> in
+                  {% for auth in last3posts.auth.all %}
+                    <a href="{{ last3posts.get_absolute_url }}">{{ auth }}</a> in
                   {% endfor %}
-                  {% for tag in last_posts.1.tags.all %}
-                    <a href="{{ tag.get_absolute_url }}"> {{ tag }}</a>
-                  {% endfor %}
-                </span>
-                <span class="date-read">{{ last_posts.1.date_pub }}<span class="mx-1">&bullet
-                </span> 3 min read <span class="icon-star2"></span></span>
-              </div>
-            </div>
-       </div>
+{#                  {% for tag in last_posts.1.tags.all %}#}
+                  <a href="{{ last3posts.category.get_absolute_url }}"> {{ last3posts.category }}</a>
+{#                  {% endfor %}#}
+                    </span>
+                   <span class="d-block">Tags:&nbsp;
+                   {% for tag in last3posts.tags.all %}
+                       <a href="{{ tag.get_absolute_url }}">{{ tag }}</a>
+                   {% endfor %}
+                   </span>
 
-
-        <div class="post-entry-2 d-flex">
-          <div class="thumbnail" style="background-image: url('{{ last_posts.2.image.url }}')"></div>
-            <div class="contents">
-              <h2><a href="{{ last_posts.all.2.get_absolute_url }}">{{ last_posts.2.title }}</a></h2>
-              <div class="post-meta">
-                <span class="d-block">
-                {% for auth in  last_posts.2.auth.all %}
-                  <a href="{{ auth.get_absolute_url }}">{{ auth }}</a> in
-                  {% endfor %}
-                  {% for tag in last_posts.2.tags.all %}
-                    <a href="{{ tag.get_absolute_url }}"> {{ tag }}</a>
-                  {% endfor %}
-                </span>
-                <span class="date-read">{{ last_posts.2.date_pub }}<span class="mx-1">&bullet
+                <span class="date-read">{{ last3posts.date_pub }}<span class="mx-1">&bullet
                 </span> 3 min read <span class="icon-star2"></span></span>
-              </div>
             </div>
+          </div>
         </div>
-
-        <div class="post-entry-2 d-flex">
-          <div class="thumbnail" style="background-image: url('{{ last_posts.3.image.url }}')"></div>
-            <div class="contents">
-              <h2><a href="{{ last_posts.all.3.get_absolute_url }}">{{ last_posts.3.title }}</a></h2>
-              <div class="post-meta">
-                <span class="d-block">
-                  {% for auth in  last_posts.3.auth.all %}
-                    <a href="{{ auth.get_absolute_url }}">{{ auth }}</a> in
-                  {% endfor %}
-                  {% for tag in last_posts.3.tags.all %}
-                    <a href="{{ tag.get_absolute_url }}"> {{ tag }}</a>
-                  {% endfor %}
-                </span>
-                <span class="date-read">{{ last_posts.2.date_pub }}<span class="mx-1">&bullet
-                </span> 3 min read <span class="icon-star2"></span></span>
-              </div>
-            </div>
-        </div>
+        {% endfor %}
       </div>
     </div>
 </div>
