--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -5,7 +5,7 @@
         <div class="row align-items-center">
 
           <div class="col-12 col-lg-12 ml-auto d-flex">
-                <a href="index.html" class="site-logo">
+                <a href="{% url 'home' %}" class="site-logo">
               Hanabis.Tech
             </a>
 
@@ -39,7 +39,7 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none pl-0 d-lg-block">
                 <li class="active">
-                  <a href="index.html" class="nav-link text-left">Home</a>
+                  <a href="{% url 'home' %}" class="nav-link text-left">Home</a>
                 </li>
                 <li>
                   <a href="categories.html" class="nav-link text-left">Categories</a>
