--- a/templates/hanabis_blog/base.html
+++ b/templates/hanabis_blog/base.html
@@ -2,12 +2,14 @@
 
 
 {% block content %}
+ <div class="site-section">
   <div class="container">
     <div class="row">
       {% block firs_posts %}
       {% endblock firs_posts %}
     </div>
   </div>
+ </div>
   <div class="container">
     <div class="row">
       {% block posts %}
