--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1541,3 +1541,26 @@ button, input, optgroup, select, textarea {
   color: #163e3e;
   /*border-color:2px solid #11ece5;*/
 }
+.btn{
+  box-shadow: none !important;
+  border-color: rgba(151, 151, 151, 0.91);
+}
+.btn-primary:focus{
+
+  background-color: #FFFFFF !important;
+  box-shadow: none !important;
+}
+.btn:hover{
+  /*background-color: #cdd4d4;*/
+  border: solid 1.5px;
+  border-color: #000000 !important;
+  box-shadow: none !important;
+}
+.btn:active{
+  /*background-color: #cdd4d4;*/
+  color: #000000 !important;
+  border: solid 1.5px;
+  border-color: #000000 !important;
+  background-color: #FFFFFF !important;
+  box-shadow: none !important;
+}
