--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,24 +1,81 @@
-{% extends "account/base.html" %}
-{##}
-{#{% load i18n %}#}
+{% extends 'hanabis_blog/base.html' %}
+{% load post_tags %}
 
-{% block auth %}
-{#{% block head_title %}{% trans "Sign Out" %}{% endblock %}#}
-    <section class="s-content s-content--narrow s-content--no-padding-bottom">
-         <article class="row format-standard">
-            <h2 class="s-content__header col-full">Log Out</h2>
 
-            <p class="s-content__header col-full">Are you sure you want to sign out?</p>
+{% block firs_posts %}
 
-                <form class="s-content__header" method="post" action="{% url 'account_logout' %}">
-                  {% csrf_token %}
-                  {% if redirect_field_value %}
-                  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-                  {% endif %}
-                  <button class="s-content__header" type="submit">Log Out</button>
-                </form>
+    {% get_last_posts count=4 %}
 
-        </article>
+<div class="col-lg-3">
+  <div class="row">
+    <div class="col-12">
+      <div class="section-title">
+        <h2>Hot News</h2>
+      </div>
+    </div>
+    <div class="col-md-8">
+      <div class="post-entry-1">
+        <a href="{{ post_list.0.get_absolute_url }}"><img src="{{ post_list.all.0.image.url }}" alt="Image" class="img-fluid"></a>
+        <h2><a href="{{ post_list.all.0.get_absolute_url }}">{{ post_list.0.title }}</a></h2>
+        <p>{{ post_list.all.0.body|striptags|slice:':100' }}</p>
+        <div class="post-meta">
+          <span class="d-block">
+          {% for auth in  post_list.0.auth.all %}
+            <a href="{{ auth.get_absolute_url }}">{{ auth }}</a> in
+          {% endfor %}
+            <a href="{{ post_list.0.category.get_absolute_url }}">{{ post_list.0.category }}</a>
+          </span>
+          <span class="d-block">Tags:&nbsp;
+           {% for tag in post_list.0.tags.all %}
+              <a href="{{ tag.get_absolute_url }}">{{ tag }}</a>
+           {% endfor %}
+          </span>
+          <span class="date-read">{{ post_list.0.date_pub }}<span class="mx-1">&bullet;
+          </span> 3 min read <span class="icon-star2"></span></span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-    </section> <!-- s-content -->
-{% endblock auth %}
+{% endblock firs_posts %}
+
+{% block posts %}
+
+<div class="col-lg-8">
+  <div class="section-title">
+    <h2>Posts List</h2>
+  </div>
+  {% for post in post_list %}
+    <div class="post-entry-2 d-flex">
+      <div class="thumbnail order-md-2" style="background-image: url('{{ post.image.url }}')"></div>
+        <div class="contents order-md-1 pl-0">
+          <h2><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h2>
+          <p class="mb-3">{{ post.body|striptags|slice:':100' }}</p>
+          <div class="post-meta">
+             <span class="d-block">
+             {% for auth in  post.auth.all %}
+               <a href="{{ aut.get_absolute_url  }}">{{ auth }}</a>
+             {% endfor %}
+             in
+{#            {% for category in post.category %}#}
+             <a href="{{ post.get_absolute_url }}">{{ post.category }}</a></span>
+{#            {% endfor %}#}
+             </span>
+             <span class="d-block">Tags:&nbsp;
+               {% for tag in post.tags.all %}
+                   <a href="{{ tag.get_absolute_url }}">{{ tag }}</a>
+               {% endfor %}
+             </span>
+            <span class="date-read">{{ post.date_pub }}<span class="mx-1">&bullet;</span> 3 min read <span class="icon-star2"></span></span>
+          </div>
+        </div>
+    </div>
+    {% endfor %}
+  {% include 'hanabis_blog/pagination.html' %}
+</div>
+
+{% endblock posts %}
+
+
+
