--- a/templates/base.html
+++ b/templates/base.html
@@ -7,16 +7,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
+  <meta name="google-signin-scope" content="profile email">
+  <meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
   <link href="https://fonts.googleapis.com/css?family=B612+Mono|Cabin:400,700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="{% static 'fonts/icomoon/style.css'%}">
-
+{#  <link rel="stylesheet" href="{% static 'fonts/icomoon/style.css'%}">#}
+{##}
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
   <link rel="stylesheet" href="{% static 'css/jquery-ui.css'%}">
   <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css'%}">
   <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css'%}">
   <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css'%}">
-
+{##}
   <link rel="stylesheet" href="{% static 'css/jquery.fancybox.min.css'%}">
 
   <link rel="stylesheet" href="{% static 'css/bootstrap-datepicker.css'%}">
@@ -49,20 +52,20 @@
     {% include 'include/footer.html' %}
   </div>
 
-  <script src="{% static 'js/jquery-3.3.1.min.js'%}"></script>
-  <script src="{% static 'js/jquery-migrate-3.0.1.min.js'%}"></script>
-  <script src="{% static 'js/jquery-ui.js'%}"></script>
-  <script src="{% static 'js/popper.min.js'%}"></script>
-  <script src="{% static 'js/bootstrap.min.js'%}"></script>
-  <script src="{% static 'js/owl.carousel.min.js'%}"></script>
-  <script src="{% static 'js/jquery.stellar.min.js'%}"></script>
-  <script src="{% static 'js/jquery.countdown.min.js'%}"></script>
-  <script src="{% static 'js/bootstrap-datepicker.min.js'%}"></script>
-  <script src="{% static 'js/jquery.easing.1.3.js'%}"></script>
-  <script src="{% static 'js/aos.js'%}"></script>
-  <script src="{% static 'js/jquery.fancybox.min.js'%}"></script>
-  <script src="{% static 'js/jquery.sticky.js'%}"></script>
-  <script src="{% static 'js/jquery.mb.YTPlayer.min.js'%}"></script>
+{#  <script src="{% static 'js/jquery-3.3.1.min.js'%}"></script>#}
+{#  <script src="{% static 'js/jquery-migrate-3.0.1.min.js'%}"></script>#}
+{#  <script src="{% static 'js/jquery-ui.js'%}"></script>#}
+{#  <script src="{% static 'js/popper.min.js'%}"></script>#}
+{#  <script src="{% static 'js/bootstrap.min.js'%}"></script>#}
+{#  <script src="{% static 'js/owl.carousel.min.js'%}"></script>#}
+{#  <script src="{% static 'js/jquery.stellar.min.js'%}"></script>#}
+{#  <script src="{% static 'js/jquery.countdown.min.js'%}"></script>#}
+{#  <script src="{% static 'js/bootstrap-datepicker.min.js'%}"></script>#}
+{#  <script src="{% static 'js/jquery.easing.1.3.js'%}"></script>#}
+{#  <script src="{% static 'js/aos.js'%}"></script>#}
+{#  <script src="{% static 'js/jquery.fancybox.min.js'%}"></script>#}
+{#  <script src="{% static 'js/jquery.sticky.js'%}"></script>#}
+{#  <script src="{% static 'js/jquery.mb.YTPlayer.min.js'%}"></script>#}
 
 
 
