--- a/templates/hanabis_blog/post_detail.html
+++ b/templates/hanabis_blog/post_detail.html
@@ -132,15 +132,16 @@
                       </div>
                       <form action="{% url 'add_review' post.id %}" method="post" class="p-5 bg-light">
                           {% csrf_token %}
-                        <div class="form-group">
-                        <div class="form-group">
-                          <label for="message">Message</label>
-                          <textarea name="text" id="message" cols="30" rows="10" class="form-control"></textarea>
-                        </div>
-                        <div class="form-group">
-                          <input type="submit" value="Post Comment" class="btn btn-sm btn-outline-secondary">
-                        </div>
-
+                          {{ form.text }}
+{#                        <div class="form-group">#}
+{#                        <div class="form-group">#}
+{#                          <label for="message">Message</label>#}
+{#                          <textarea name="text" id="message" cols="30" rows="10" class="form-control"></textarea>#}
+{#                        </div>#}
+{#                        <div class="form-group">#}
+{#                          <input type="submit" value="Post Comment" class="btn btn-sm btn-outline-secondary">#}
+{#                        </div>#}
+{##}
                       </form>
                     </div>
                   </div>
