--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -1,70 +1,83 @@
 {% load static %}
-
+{% load i18n %}
+{% load account socialaccount %}
+{% load socialaccount %}
+{% get_providers as socialaccount_providers %}
 <div class="header-top">
-      <div class="container">
-        <div class="row align-items-center">
+ <div class="container">
+   <div class="row align-items-center">
+     <div class="col-12 col-lg-12 ml-auto d-flex">
+       <a href="{% url 'home' %}" class="site-logo">
+         Hanabis.Tech
+       </a>
+        <a href="#" class="ml-auto d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black">
+           <span class="icon-menu h3"></span>
+        </a>
+     <div class="ml-md-auto top-social d-none d-lg-inline-block">
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-primary btn-sm" type="submit">Search</button>
+      </form>
+     </div>
 
-          <div class="col-12 col-lg-12 ml-auto d-flex">
-                <a href="{% url 'home' %}" class="site-logo">
-              Hanabis.Tech
-            </a>
+       </div>
+{#       <div class="col-6 d-block d-lg-none text-right">#}
+{#           <p>TEST</p>#}
+{#       </div>#}
+     </div>
+   </div>
 
-            <a href="#" class="ml-auto d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black"><span
-                class="icon-menu h3"></span></a>
-            <div class="ml-md-auto top-social d-none d-lg-inline-block">
+ <div class="site-navbar py-2 js-sticky-header site-navbar-target d-none pl-0 d-lg-block" role="banner">
+   <div class="container">
 
-            </div>
 
-               <form class="form-inline my-2 my-lg-0">
-                  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-primary btn-sm" type="submit">Search</button>
-               </form>
+       <div class="col-12 col-lg-12 ml-auto d-flex">
 
-          </div>
-          <div class="col-6 d-block d-lg-none text-right">
 
-          </div>
+         <nav class="site-navigation position-relative text-right" role="navigation">
+           <ul class="site-menu main-menu js-clone-nav mr-auto d-none pl-0 d-lg-block">
+             <li class="active">
+               <a href="{% url 'home' %}" class="nav-link text-left">Home</a>
+             </li>
+             <li>
+               <a href="categories.html" class="nav-link text-left">Posts</a>
+             </li>
+             <li>
+               <a href="categories.html" class="nav-link text-left">Categories</a>
+             </li>
+             <li>
+               <a href="categories.html" class="nav-link text-left">Our projects</a>
+             </li>
+
+             <li>
+               <a href="categories.html" class="nav-link text-left">About</a>
+             </li>
+            <li class="nav-item"><a href="#" class="nav-link"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link"></a></li>
+            {% if user.is_authenticated %}
+            <li>
+                 <form class="s-content__header" method="get" action="{% url 'account_logout' %}">
+                  <input type="hidden" name="" value=""/>
+                   <button class="btn btn-primary btn-sm">Log out</button>
+                </form>
+            </li>
+            {% else %}
+                {% for provider in socialaccount_providers %}
+                <li>
+                  <a title="{{provider.name}}" class="s-content__header {{provider.id}}"
+                     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}"><button class="btn btn-primary btn-sm">
+                      <img src="/media/icons8-google2.svg" alt=""> Sign in</button></a>
+                </li>
+                {% endfor %}
+            {% endif %}
+           </ul>
+         </nav>
         </div>
       </div>
-
-
-
-
-      <div class="site-navbar py-2 js-sticky-header site-navbar-target d-none pl-0 d-lg-block" role="banner">
-
-      <div class="container">
-        <div class="d-flex align-items-center">
-
-          <div class="mr-auto">
-            <nav class="site-navigation position-relative text-right" role="navigation">
-              <ul class="site-menu main-menu js-clone-nav mr-auto d-none pl-0 d-lg-block">
-                <li class="active">
-                  <a href="{% url 'home' %}" class="nav-link text-left">Home</a>
-                </li>
-                <li>
-                  <a href="categories.html" class="nav-link text-left">Categories</a>
-                </li>
-                <li>
-                  <a href="categories.html" class="nav-link text-left">Politics</a>
-                </li>
-                <li>
-                  <a href="categories.html" class="nav-link text-left">Business</a>
-                </li>
-                <li>
-                    <a href="categories.html" class="nav-link text-left">Health</a>
-                </li>
-                <li><a href="categories.html" class="nav-link text-left">Design</a></li>
-                <li>
-                  <a href="categories.html" class="nav-link text-left">Sport</a>
-                </li>
-                <li><a href="contact.html" class="nav-link text-left">Contact</a></li>
-              </ul>
-            </nav>
-
-          </div>
-
-        </div>
-      </div>
-
-    </div>
-
+     </div>
+</div>
