--- a/templates/hanabis_blog/pagination.html
+++ b/templates/hanabis_blog/pagination.html
@@ -5,22 +5,22 @@
 
                     {% if page_obj.has_previous %}
                         {% if page_obj.number|add:-3 > 1 %}
-                            <li><a href="?{{ s }}page=1">1</a></li>
+                            <li><a href="?{{ s }}page=1#posts">1</a></li>
                         {% endif %}
                         {% if page_obj.number|add:-3 > 3 %}
-                            <li><a href="?{{ s }}page={{ page_obj.previous_page_number|add:-3 }}">
+                            <li><a href="?{{ s }}page={{ page_obj.previous_page_number|add:-3 }}#posts">
                                 <span class="dots">...</span>
                             </a></li>
                         {% endif %}
-                            <li><a class="pgn__prev"  href="?{{ s }}page={{ page_obj.previous_page_number }}">Prev</a></li>
+                            <li><a class="pgn__prev"  href="?{{ s }}page={{ page_obj.previous_page_number }}#posts">Prev</a></li>
                          {% endif %}
 
                     {%  if paginator.page_range|length > 1 %}
                         {% for page_num in paginator.page_range %}
                              {% if page_obj.number == page_num %}
-                                <li><a class="active" href="?{{ s }}page={{ page_num }}">{{ page_num }}</a></li>
+                                <li><a class="active" href="?{{ s }}page={{ page_num }}#posts">{{ page_num }}</a></li>
                             {% elif page_num > page_obj.number|add:-4  and page_num < page_obj.number|add:4 %}
-                                  <li><a href="?{{ s }}page={{ page_num }}">{{ page_num }}</a></li>
+                                  <li><a href="?{{ s }}page={{ page_num }}#posts">{{ page_num }}</a></li>
                             {% endif %}
                         {% endfor %}
                     {% endif %}
@@ -31,15 +31,15 @@
 {#                    <li><a class="pgn__num" href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a></li>#}
                     {% if page_obj.has_next %}
                         {% if page_obj.number|add:4 < page_obj.paginator.num_pages %}
-                            <li><a href="?{{ s }}page={{ page_obj.next_page_number|add:3 }}">
+                            <li><a href="?{{ s }}page={{ page_obj.next_page_number|add:3 }}#posts">
                                 <span class="dots">...</span>
                             </a></li>
                         {% endif %}
                         {% if page_obj.number|add:3 < page_obj.paginator.num_pages %}
-                            <li><a href="?{{ s }}page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a></li>
+                            <li><a href="?{{ s }}page={{ page_obj.paginator.num_pages }}#posts">{{ page_obj.paginator.num_pages }}</a></li>
 
                         {% endif %}
-                        <li><a class="pgn__next" href="?{{ s }}page={{ page_obj.next_page_number }}">Next</a></li>
+                        <li><a class="pgn__next" href="?{{ s }}page={{ page_obj.next_page_number }}#posts">Next</a></li>
                     {% endif %}
                 </ul>
 
