--- a/templates/hanabis_blog/post_list.html
+++ b/templates/hanabis_blog/post_list.html
@@ -44,7 +44,7 @@
 
 <div class="col-lg-8">
   <div class="section-title">
-    <h2>Posts List</h2>
+    <h2 id="posts">Recent posts</h2>
   </div>
   {% for post in post_list %}
     <div class="post-entry-2 d-flex">
