--- a/templates/hanabis_blog/post_detail.html
+++ b/templates/hanabis_blog/post_detail.html
@@ -42,112 +42,78 @@
 
                   <div class="pt-5">
                     <div class="section-title">
-                      <h2 class="mb-5">6 Comments</h2>
+                      <h2 class="mb-5">{{ post.reviews_set.all.count}} Comments</h2>
                     </div>
                     <ul class="comment-list">
+                    {% for review in post.get_review %}
+
+
                       <li class="comment">
                         <div class="vcard bio">
-                          <img src="images/person_1.jpg" alt="Image placeholder">
+                          <img src="{{ review.user.values.0.extra_data.picture }}" alt="Image placeholder">
                         </div>
                         <div class="comment-body">
-                          <h3>Jean Doe</h3>
-                          <div class="meta">January 9, 2018 at 2:21pm</div>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-                          <p><a href="#" class="reply">Reply</a></p>
+                          <h3>{{ review.name }}</h3>
+                          <div class="meta">{{ review.date_pub }}</div>
+                          <p>{{ review.text }}</p>
+                          <p><a href="#formReview" onclick="addReview('{{ review.name }}', '{{ review.id }}')" class="reply">Reply</a></p>
                         </div>
                       </li>
-
-                      <li class="comment">
-                        <div class="vcard bio">
-                          <img src="images/person_1.jpg" alt="Image placeholder">
-                        </div>
-                        <div class="comment-body">
-                          <h3>Jean Doe</h3>
-                          <div class="meta">January 9, 2018 at 2:21pm</div>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-                          <p><a href="#" class="reply">Reply</a></p>
-                        </div>
-
+                    {% for child_rew in review.reviews_set.all %}
                         <ul class="children">
                           <li class="comment">
                             <div class="vcard bio">
-                              <img src="images/person_1.jpg" alt="Image placeholder">
+                              <img src="{{ child_rew.user.values.0.extra_data.picture }}" alt="Image placeholder">
                             </div>
                             <div class="comment-body">
-                              <h3>Jean Doe</h3>
-                              <div class="meta">January 9, 2018 at 2:21pm</div>
-                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-                              <p><a href="#" class="reply">Reply</a></p>
+                              <h3>{{ child_rew.name }}</h3>
+                              <div class="meta">{{ child_rew.date_pub }}</div>
+                              <p>{{ child_rew.text }}</p>
+                              <p><a href="#formReview"  class="reply">Reply</a></p>
                             </div>
-
-
-                            <ul class="children">
-                              <li class="comment">
-                                <div class="vcard bio">
-                                  <img src="images/person_1.jpg" alt="Image placeholder">
-                                </div>
-                                <div class="comment-body">
-                                  <h3>Jean Doe</h3>
-                                  <div class="meta">January 9, 2018 at 2:21pm</div>
-                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-                                  <p><a href="#" class="reply">Reply</a></p>
-                                </div>
-
-                                  <ul class="children">
-                                    <li class="comment">
-                                      <div class="vcard bio">
-                                        <img src="images/person_1.jpg" alt="Image placeholder">
-                                      </div>
-                                      <div class="comment-body">
-                                        <h3>Jean Doe</h3>
-                                        <div class="meta">January 9, 2018 at 2:21pm</div>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-                                        <p><a href="#" class="reply">Reply</a></p>
-                                      </div>
-                                    </li>
-                                  </ul>
-                              </li>
-                            </ul>
                           </li>
                         </ul>
-                      </li>
-
-                      <li class="comment">
-                        <div class="vcard bio">
-                          <img src="images/person_1.jpg" alt="Image placeholder">
-                        </div>
-                        <div class="comment-body">
-                          <h3>Jean Doe</h3>
-                          <div class="meta">January 9, 2018 at 2:21pm</div>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-                          <p><a href="#" class="reply">Reply</a></p>
-                        </div>
-                      </li>
+                     {% endfor %}
+{##}                {% endfor %}
                     </ul>
-                    <!-- END comment-list -->
 
                     <div class="comment-form-wrap pt-5">
                       <div class="section-title">
                         <h2 class="mb-5">Leave a comment</h2>
                       </div>
-                      <form action="{% url 'add_review' post.id %}" method="post" class="p-5 bg-light">
+                      <form action="{% url 'add_review' post.id %}" class="p-5 bg-light" method="post" id="formReview">
                           {% csrf_token %}
-                          {{ form.text }}
-{#                        <div class="form-group">#}
-{#                        <div class="form-group">#}
-{#                          <label for="message">Message</label>#}
+                          <input type="hidden" name="parent" id="parent" value="">
+
+                          <input  type="hidden" id="name" name="name" value="{{ user.socialaccount_set.all.0.extra_data.given_name }}">
+                          <input  type="hidden" id="username" name="username" value="{{ user.socialaccount_set.all.0.user }}">
+
+
+
+                          <input type="hidden" id="email" name="email" value="{{ user.socialaccount_set.all.0.extra_data.email }}">
+
+
+                        <div class="form-group">
+                          <label for="message">Message</label>
+                            {{ form.text }}
 {#                          <textarea name="text" id="message" cols="30" rows="10" class="form-control"></textarea>#}
-{#                        </div>#}
-{#                        <div class="form-group">#}
-{#                          <input type="submit" value="Post Comment" class="btn btn-sm btn-outline-secondary">#}
-{#                        </div>#}
-{##}
+                        </div>
+                          {{ form.recaptcha }}
+                        <div class="form-group">
+                          <input type="submit" value="Post Comment" class="btn btn-primary py-3">
+                        </div>
+
                       </form>
                     </div>
-                  </div>
           </div>
         </div>
       </div>
     </div>
-
+    </div>
+    <script>
+    function addReview(name, id) {
+        document.getElementById('parent').value = id;
+        document.getElementById('message').innerText = `${name}, `;
+            }
+    </script>
 {% endblock content %}
