--- a/templates/hanabis_blog/post_detail.html
+++ b/templates/hanabis_blog/post_detail.html
@@ -25,10 +25,8 @@
               </span>
                     <span class="date-read">{{ post.date_pub }} <span class="mx-1">&bullet;</span> 3 min read <span class="icon-star2"></span></span>
                   </div>
-                </div>
-
-                <p>{{ post.body }}</p>
-
+               </div>
+                <p>{{ post.body | striptags }}</p>
             <div class="pt-5">
                 <h5>Tags:&nbsp;</h5>
                  {% for tag in post.tags.all %}
@@ -38,19 +36,17 @@
 {#                   <button type="button" class="follow">{{ tag }}</button>#}
                   {% endfor %}
             </div>
-
-
                   <div class="pt-5">
                     <div class="section-title">
                       <h2 class="mb-5">{{ post.reviews_set.all.count}} Comments</h2>
                     </div>
                     <ul class="comment-list">
-                    {% for review in post.get_review %}
 
+                    {% for review in post.get_review %}
 
                       <li class="comment">
                         <div class="vcard bio">
-                          <img src="{{ review.user.values.0.extra_data.picture }}" alt="Image placeholder">
+                          <img src="{{ review.picture }}" alt="Image placeholder">{{ review.user.values }}
                         </div>
                         <div class="comment-body">
                           <h3>{{ review.name }}</h3>
@@ -63,7 +59,7 @@
                         <ul class="children">
                           <li class="comment">
                             <div class="vcard bio">
-                              <img src="{{ child_rew.user.values.0.extra_data.picture }}" alt="Image placeholder">
+                              <img src="{{ child_rew.picture }}" alt="Image placeholder">
                             </div>
                             <div class="comment-body">
                               <h3>{{ child_rew.name }}</h3>
@@ -84,15 +80,9 @@
                       <form action="{% url 'add_review' post.id %}" class="p-5 bg-light" method="post" id="formReview">
                           {% csrf_token %}
                           <input type="hidden" name="parent" id="parent" value="">
-
                           <input  type="hidden" id="name" name="name" value="{{ user.socialaccount_set.all.0.extra_data.given_name }}">
                           <input  type="hidden" id="username" name="username" value="{{ user.socialaccount_set.all.0.user }}">
-
-
-
                           <input type="hidden" id="email" name="email" value="{{ user.socialaccount_set.all.0.extra_data.email }}">
-
-
                         <div class="form-group">
                           <label for="message">Message</label>
                             {{ form.text }}
@@ -100,9 +90,8 @@
                         </div>
                           {{ form.recaptcha }}
                         <div class="form-group">
-                          <input type="submit" value="Post Comment" class="btn btn-primary py-3">
+                          <input type="submit" value="Post Comment" class="btn btn-primary  btn-sm">
                         </div>
-
                       </form>
                     </div>
           </div>
