--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -45,7 +45,7 @@
                <a href="{% url 'posts' %}" class="nav-link text-left">Posts</a>
              </li>
              <li>
-               <a href="categories.html" class="nav-link text-left">Categories</a>
+               <a href="{% url 'categories' %}" class="nav-link text-left">Categories</a>
              </li>
              <li>
                <a href="categories.html" class="nav-link text-left">Our projects</a>
