Routing added for navbar

--- a/templates/hanabis_blog/base.html
+++ b/templates/hanabis_blog/base.html
@@ -11,9 +11,9 @@
   </div>
  </div>
   <div class="container">
-    <div class="row">
+{#    <div class="row">#}
       {% block posts %}
       {% endblock posts %}
-    </div>
+{#    </div>#}
   </div>
 {% endblock content %}
