--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -17,7 +17,7 @@
         </a>
      <div class="ml-md-auto top-social d-none d-lg-inline-block">
       <form class="form-inline my-2 my-lg-0" action="{% url 'search' %}" method="get">
-        <input name="s" class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+        <input name="s" class="form-control mr-sm-2 searchInput" type="text" placeholder="Your query here" aria-label="Search">
         <button class="btn btn-primary btn-sm" type="submit">Search</button>
       </form>
      </div>
