--- a/templates/hanabis_blog/all_posts.html
+++ b/templates/hanabis_blog/all_posts.html
@@ -1,3 +1,61 @@
-{% for post in post_list %}
-    {{ post }}
-{% endfor %}
+{% extends 'hanabis_blog/base_main.html' %}
+
+{% block content %}
+<div class="site-wrap">
+    <div class="site-section">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-lg-8">
+            <div class="section-title">
+{#              <span class="caption d-block small">Categories</span>#}
+              <h2>All posts</h2>
+            </div>
+            {% for post in post_list %}
+              <div class="post-entry-2 d-flex">
+                <div class="thumbnail order-md-2" style="background-image: url('{{ post.image.url }}')"></div>
+                <div class="contents order-md-1 pl-0">
+                  <h2><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h2>
+                  <p class="mb-3">{{ post.body|striptags|slice:':100' }}</p>
+                  <div class="post-meta">
+                     <span class="d-block">
+                     {% for auth in  post.auth.all %}
+                       <a href="{{ aut.get_absolute_url  }}">{{ auth }}</a>
+                     {% endfor %}
+                     in
+
+                     <a href="{{ post.get_absolute_url }}">{{ post.category }}</a></span>
+                        <span class="d-block">Tags:&nbsp;
+                       {% for tag in post.tags.all %}
+                           <a href="{{ tag.get_absolute_url }}">{{ tag }}</a>
+                       {% endfor %}
+                     </span>
+{#                    {% endfor %}#}
+                     <span class="date-read">{{ post.date_pub }}<span class="mx-1"></span></span>
+                  </div>
+                </div>
+              </div>
+              {% endfor %}
+            </div>
+          <div class="col-lg-3">
+
+            <div class="section-title">
+              <h2>Popular Posts</h2>
+            </div>
+
+            <div class="trend-entry d-flex">
+              <div class="number align-self-start">01</div>
+                <div class="trend-contents">
+                  <h2><a href="blog-single.html">News Needs to Meet Its Audiences Where They Are</a></h2>
+                  <div class="post-meta">
+                  <span class="d-block"><a href="#">Dave Rogers</a> in <a href="#">News</a></span>
+                  <span class="date-read">Jun 14 <span class="mx-1">&bullet;</span> 3 min read <span class="icon-star2"></span></span>
+                </div>
+            </div>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
+{% endblock %}
