--- a/templates/hanabis_blog/post_list.html
+++ b/templates/hanabis_blog/post_list.html
@@ -36,45 +36,92 @@
       </div>
     </div>
   </div>
-</div>
+  </div>
 
 {% endblock firs_posts %}
 
 {% block posts %}
+  <div class="row">
+    <div class="col-lg-8">
+      <div class="section-title">
+        <h2 id="posts">Recent posts</h2>
+      </div>
+      {% for post in post_list %}
+      <div class="post-entry-2 d-flex">
+        <div class="thumbnail order-md-2" style="background-image: url('{{ post.image.url }}')"></div>
+          <div class="contents order-md-1 pl-0">
+            <h2><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h2>
+            <p class="mb-3">{{ post.body|striptags|slice:':100' }}</p>
+              <div class="post-meta">
+                 <span class="d-block">
+                 {% for auth in  post.auth.all %}
+                   <a href="{{ aut.get_absolute_url  }}">{{ auth }}</a>
+                 {% endfor %}
+                 in
+    {#            {% for category in post.category %}#}
+                 <a href="{{ post.get_absolute_url }}">{{ post.category }}</a></span>
+    {#            {% endfor %}#}
 
-<div class="col-lg-8">
-  <div class="section-title">
-    <h2 id="posts">Recent posts</h2>
-  </div>
-  {% for post in post_list %}
-    <div class="post-entry-2 d-flex">
-      <div class="thumbnail order-md-2" style="background-image: url('{{ post.image.url }}')"></div>
-        <div class="contents order-md-1 pl-0">
-          <h2><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h2>
-          <p class="mb-3">{{ post.body|striptags|slice:':100' }}</p>
-          <div class="post-meta">
-             <span class="d-block">
-             {% for auth in  post.auth.all %}
-               <a href="{{ aut.get_absolute_url  }}">{{ auth }}</a>
-             {% endfor %}
-             in
-{#            {% for category in post.category %}#}
-             <a href="{{ post.get_absolute_url }}">{{ post.category }}</a></span>
-{#            {% endfor %}#}
-             </span>
-             <span class="d-block">Tags:&nbsp;
-               {% for tag in post.tags.all %}
-                   <a href="{{ tag.get_absolute_url }}">{{ tag }}</a>
-               {% endfor %}
-             </span>
-            <span class="date-read">{{ post.date_pub }}<span class="mx-1">&bullet;</span> 3 min read <span class="icon-star2"></span></span>
+                 <span class="d-block">Tags:&nbsp;
+                   {% for tag in post.tags.all %}
+                       <a href="{{ tag.get_absolute_url }}">{{ tag }}</a>
+                   {% endfor %}
+                 </span>
+                <span class="date-read">{{ post.date_pub }}<span class="mx-1">&bullet;</span> 3 min read <span class="icon-star2"></span></span>
+              </div>
           </div>
+      </div>
+      {% endfor %}
+    </div>
+    <div class="row">
+        <div class="col-lg-6">
+
+                <ul class="custom-pagination list-unstyled">
+
+                    {% if page_obj.has_previous %}
+                        {% if page_obj.number|add:-3 > 1 %}
+                            <li><a href="?{{ s }}page=1#posts">1</a></li>
+                        {% endif %}
+                        {% if page_obj.number|add:-3 > 3 %}
+                            <li><a href="?{{ s }}page={{ page_obj.previous_page_number|add:-3 }}#posts">
+                                <span class="dots">...</span>
+                            </a></li>
+                        {% endif %}
+                            <li><a class="pgn__prev"  href="?{{ s }}page={{ page_obj.previous_page_number }}#posts">Prev</a></li>
+                         {% endif %}
+
+                    {%  if paginator.page_range|length > 1 %}
+                        {% for page_num in paginator.page_range %}
+                             {% if page_obj.number == page_num %}
+                                <li><a class="active" href="?{{ s }}page={{ page_num }}#posts">{{ page_num }}</a></li>
+                            {% elif page_num > page_obj.number|add:-4  and page_num < page_obj.number|add:4 %}
+                                  <li><a href="?{{ s }}page={{ page_num }}#posts">{{ page_num }}</a></li>
+                            {% endif %}
+                        {% endfor %}
+                    {% endif %}
+{#                            <li><span class="pgn__num current">#}
+{#                                 Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.#}
+{#                           </span></li>#}
+
+{#                    <li><a class="pgn__num" href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a></li>#}
+                    {% if page_obj.has_next %}
+                        {% if page_obj.number|add:4 < page_obj.paginator.num_pages %}
+                            <li><a href="?{{ s }}page={{ page_obj.next_page_number|add:3 }}#posts">
+                                <span class="dots">...</span>
+                            </a></li>
+                        {% endif %}
+                        {% if page_obj.number|add:3 < page_obj.paginator.num_pages %}
+                            <li><a href="?{{ s }}page={{ page_obj.paginator.num_pages }}#posts">{{ page_obj.paginator.num_pages }}</a></li>
+
+                        {% endif %}
+                        <li><a class="pgn__next" href="?{{ s }}page={{ page_obj.next_page_number }}#posts">Next</a></li>
+                    {% endif %}
+                </ul>
+
         </div>
     </div>
-    {% endfor %}
-  {% include 'hanabis_blog/pagination.html' %}
-</div>
-
+  </div>
+{% include 'hanabis_blog/pagination.html' %}
 {% endblock posts %}
 
 
