--- a/templates/hanabis_blog/post_list.html
+++ b/templates/hanabis_blog/post_list.html
@@ -1,6 +1,6 @@
 {% extends 'hanabis_blog/base.html' %}
 {% load post_tags %}
-
+{% load hitcount_tags %}
 
 {% block firs_posts %}
 
@@ -32,6 +32,7 @@
           </span>
           <span class="date-read">{{ post_list.0.date_pub }}<span class="mx-1">&bullet;
           </span> 3 min read <span class="icon-star2"></span></span>
+          <span class="d-block">Post views: {% get_hit_count for post_list.0 %}</span>
         </div>
       </div>
     </div>
@@ -68,60 +69,15 @@
                    {% endfor %}
                  </span>
                 <span class="date-read">{{ post.date_pub }}<span class="mx-1">&bullet;</span> 3 min read <span class="icon-star2"></span></span>
+                <span class="d-block">Post views: {% get_hit_count for post %}</span>
               </div>
           </div>
       </div>
       {% endfor %}
+    {% include 'hanabis_blog/pagination.html' %}
     </div>
-    <div class="row">
-        <div class="col-lg-6">
 
-                <ul class="custom-pagination list-unstyled">
 
-                    {% if page_obj.has_previous %}
-                        {% if page_obj.number|add:-3 > 1 %}
-                            <li><a href="?{{ s }}page=1#posts">1</a></li>
-                        {% endif %}
-                        {% if page_obj.number|add:-3 > 3 %}
-                            <li><a href="?{{ s }}page={{ page_obj.previous_page_number|add:-3 }}#posts">
-                                <span class="dots">...</span>
-                            </a></li>
-                        {% endif %}
-                            <li><a class="pgn__prev"  href="?{{ s }}page={{ page_obj.previous_page_number }}#posts">Prev</a></li>
-                         {% endif %}
-
-                    {%  if paginator.page_range|length > 1 %}
-                        {% for page_num in paginator.page_range %}
-                             {% if page_obj.number == page_num %}
-                                <li><a class="active" href="?{{ s }}page={{ page_num }}#posts">{{ page_num }}</a></li>
-                            {% elif page_num > page_obj.number|add:-4  and page_num < page_obj.number|add:4 %}
-                                  <li><a href="?{{ s }}page={{ page_num }}#posts">{{ page_num }}</a></li>
-                            {% endif %}
-                        {% endfor %}
-                    {% endif %}
-{#                            <li><span class="pgn__num current">#}
-{#                                 Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.#}
-{#                           </span></li>#}
-
-{#                    <li><a class="pgn__num" href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a></li>#}
-                    {% if page_obj.has_next %}
-                        {% if page_obj.number|add:4 < page_obj.paginator.num_pages %}
-                            <li><a href="?{{ s }}page={{ page_obj.next_page_number|add:3 }}#posts">
-                                <span class="dots">...</span>
-                            </a></li>
-                        {% endif %}
-                        {% if page_obj.number|add:3 < page_obj.paginator.num_pages %}
-                            <li><a href="?{{ s }}page={{ page_obj.paginator.num_pages }}#posts">{{ page_obj.paginator.num_pages }}</a></li>
-
-                        {% endif %}
-                        <li><a class="pgn__next" href="?{{ s }}page={{ page_obj.next_page_number }}#posts">Next</a></li>
-                    {% endif %}
-                </ul>
-
-        </div>
-    </div>
-  </div>
-{% include 'hanabis_blog/pagination.html' %}
 {% endblock posts %}
 
 
